--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -2154,6 +2154,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "        Loading Model\n",
+    "\"\"\"\n",
+    "from tensorflow import keras\n",
+    "model = keras.models.load_model('Final Model.h5')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_preds = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 4\n",
+    "predeiction = X_preds[index]\n",
+    "test_image = X_test[index]\n",
+    "test_label = y_test = [index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if test_label[0] < .5:\n",
+    "    plt.axis('off')        \n",
+    "    plt.title('IDC (+)')\n",
+    "    plt.imshow(test_image.astype('uint8'))\n",
+    "elif test_label[0] >= .5:\n",
+    "    plt.axis('off')        \n",
+    "    plt.title('IDC (-)')\n",
+    "    plt.imshow(test_image.astype('uint8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if predeiction[0] < .5:\n",
+    "    print(\"Image has a positive cancer\")\n",
+    "elif predeiction[0] >= .5:\n",
+    "    print(\"Image has a negative cancer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
